tests/baselines/reference/varArgConstructorMemberParameter.errors.txt
varArgConstructorMemberParameter.ts(10,18): error TS1317: A parameter property cannot be declared using a rest parameter.


==== varArgConstructorMemberParameter.ts (1 errors) ====
    class Foo1 {
        constructor (...args: string[]) { }
    }
    
    class Foo2 {
        constructor (public args: string[]) { }
    }
    
    class Foo3 {
        constructor (public ...args: string[]) { }
                     ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1317: A parameter property cannot be declared using a rest parameter.
    }
    